Update style so header is fixed on small devices

--- a/src/assets/styles/Header.scss
+++ b/src/assets/styles/Header.scss
@@ -43,7 +43,13 @@
 
 @media (max-width: 768px) {
   .header-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     justify-content: space-between;
+    padding: 1em;
+    z-index: 1000;
 
     .menu-toggle {
       display: block;
